# AgenticComparison

./: .env.example  .gitignore  README.md  pyproject.toml  run_eval.sh  run_phase1.sh  run_v2.sh
attacks/: payloads.json
data/: evals.db
docs/: architecture_rationale.md  fyp_report.bib  fyp_report.docx  fyp_report.tex  implementation_plan.md  report_fork.tex  threat_model.md  v2_phase1_results.md
docs/payloads/: 01_added_regulatory_framing_and_ambiguous_requests.md  tier_c_split_rationale.md  tier_c_v4_analysis.md
docs/research/: threat_model.md  tier_c_structural_finding.md  tier_sources_review.md  tier_taxonomy.md
docs/runs/: v2_run1_analysis.md
src/: __init__.py  base.py  config.py  db.py  dual_llm_agent.py  eval.py  main.py  models.py  prompts.py  pte_agent.py  react_agent.py  schema_dual_llm_agent.py  tools.py
tests/: __init__.py  test_agent.py
